prevent grid overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 * {
     box-sizing: border-box;
+    /* border: solid 2px red; */
+}
+
+html {
+    /* footer support */
+    position: relative;
+    min-height: 100%;
 }
 
 body {
@@ -8,11 +15,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* footer support */
+    margin-bottom: 50px;
 }
 
 .wrapper {
     display: flex;
-    height: 90vh;
+    /* height: 90vh; */
+    /* margin-bottom: 50px; */
     width: 100%;
     align-items: start;
     justify-content: center;
@@ -59,11 +69,13 @@ form div {
     margin: 0 auto;
     width: 80%; */
 
-    max-height: calc(100vh - 140px);
+    /* max-height: calc(100vh - 140px); */
     width: 80%;
+    padding: 20px;
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+    /* overflow: scroll; */
 }
 
 .card {
@@ -72,4 +84,12 @@ form div {
     padding: 10px;
     background-color: #fff;
     border-radius: 10px;
+}
+
+.footer {
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
 }
